--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,12 @@ import '../styles/Home.css';
 <Layout title={en.home.title}, description={en.home.description}>
 	<Centred>
 		<h1>{en.home.intro}</h1>
-		<p>{en.home.about}</p>
+		<p>
+			{en.home.about}
+			<br />
+			{en.home.future}
+			<br />
+			{en.home.interests}
+		</p>
 	</Centred>
 </Layout>
