--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -1,5 +1,5 @@
 ---
-const options = ["About", "Projects", "Contact"] as const;
+const options = ["About", /*"Projects",*/ "Contact", "Blog"] as const;
 
 import '../styles/NavBar.css';
 ---
