--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -32,7 +32,7 @@ import { socialLinks } from "../scripts/socialLinks";
         display: flex;
         flex-direction: row;
         gap: 0.5rem;
-        background-color: gray;
+        background-color: #9370DB;
         border-radius: 25px;
         justify-content: center;
         align-items: center;
