--- a/src/components/Stack.astro
+++ b/src/components/Stack.astro
@@ -32,7 +32,7 @@ import { stack } from "../scripts/stack.ts";
         display: flex;
         flex-direction: row;
         gap: 0.5rem;
-        background-color: gray;
+        background-color: #9370DB;
         border-radius: 20px;
         margin-bottom: 1rem;
         padding: 0.2rem
