--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,17 +1,27 @@
 h1 {
     color: var(--color);
-    font-size: 2.5rem;
+    font-size: 3rem;
 }
 
 p {
     color: var(--color);
-    font-size: 1.05rem;
+    font-size: 1.2rem;
     line-height: 1.6;
 }
 
-h1:is(:hover, :focus) {
-    background-image: var(--accent-gradient);
-    color: transparent;
-    background-size: cover;
-    background-clip: text;
+h3 {
+    color: var(--color);
+    font-size: 2rem;
+    margin-top: 1.5rem;
+}
+
+#intro {
+    margin-top: 2rem;
+    margin-bottom: 0;
+}
+
+#sub-intro {
+    margin-top: 0;
+    color: #d1d1d1d1;
+    font-size: 2.7rem;
 }
